# petroineos-challenge

./: LICENSE  README.md  pyproject.toml
Petroineos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
petroineos/: ET_3.1_SEP_24.xlsx  petroineos_data_driver.py  petroineos_data_module.py
petroineos/cleaned_quarter_files/: quarter.csv
tests/: petroineos_data_tests.py
